# ProjetISI

./: Bench.cpp  Bench.h  CMakeLists.txt  Doxyfile  README  cmake_install.cmake  config.cpp  config.h  isiviewer.pro  main.cpp  moc_my_main_window.cxx  moc_my_scene.cxx  my_gui_form.ui  my_main_window.cpp  my_main_window.h  my_object3d.cpp  my_object3d.h  my_qglviewer.cpp  my_qglviewer.h  my_scene.cpp  my_scene.h
objects/: Copy of cylinder.cpp.bak  cone.cpp  cone.h  cube.cpp  cube.h  cylinder.cpp  cylinder.h  disk.cpp  disk.cpp (Case Conflict 1)  disk.h  disk.h (Case Conflict 1)  func_surface.cpp  func_surface.h  off_loader.cpp  off_loader.h  partialdisk.cpp  partialdisk.h  pyramid.cpp  pyramid.h  sphere.cpp  sphere.h  sphere_subdiv.cpp  sphere_subdiv.h  triMesh.cpp  triMesh.h
